@@ -1,7 +1,17 @@
 2006-04-02  David Reveman  <davidr@novell.com>
 
+	* plugins/water.c: Add scale and bias to normal so that light can be
+	computed correclty. Offset texture coordinates for nice refraction
+	effect. (P-a Bäckström)
+	(waterDrawWindowTexture): Add scaling after setting up texture
+	coordinate generation.
+	Fix up loading of bump map programs.
+	(softwareUpdate): Improve performance of software fall-back code a bit.
+	(waterDrawWindowTexture): Always use filter for when window is
+	transformed.
+
 	* plugins/gconf.c (gconfGetValue): Fix typo that caused color
-        parsing to be incomplete (Quinn Storm).
+	parsing to be incomplete (Quinn Storm).
 
 2006-04-01  David Reveman  <davidr@novell.com>
 
